--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,23 @@
+version: 2.1
 
+jobs:
+  build:
+    docker:
+      - image: circleci/python:3.9
+
+    steps:
+      - checkout
+
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.txt
+
+      - run:
+          name: Run tests
+          command: pytest
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
